// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Animated Numbers renders correctly 1`] = `
<jest>
  <div
    class="ecl-animated-numbers ecl-animated-numbers--counter-color"
    data-ecl-auto-init="AnimatedNumbers"
  >
    <div
      class="ecl-animated-numbers__items"
    >
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--users ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--users"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              213
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              €
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--currency-eur ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--currency-eur"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              billion
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              888.2
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              €
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--trend-up ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--trend-up"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              billion
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              975
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              &lt;
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--pulse ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--pulse"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              1250
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              billions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--aperture ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--aperture"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              50
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              trillions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--atom ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--atom"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              4350
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              millions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Curabitur ut mauris quam. Fusce non consequat ipsum
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--bell-simple ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--bell-simple"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              125
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              billions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Curabitur ut mauris quam. Fusce non consequat ipsum
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--boat ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--boat"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              8765
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              billions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Integer pharetra lacinia tristique
        </div>
      </div>
    </div>
    <div
      class="ecl-animated-numbers__sources"
    >
      <span
        class="ecl-animated-numbers__sources-label"
      >
        Sources:
      </span>
      <a
        class="ecl-link ecl-animated-numbers__source"
        href="/example"
      >
        Eurostat
      </a>
      <a
        class="ecl-link ecl-animated-numbers__source"
        href="/example"
      >
        DG CNECT
      </a>
      <a
        class="ecl-link ecl-animated-numbers__source"
        href="/example"
      >
        Eurostat
      </a>
    </div>
  </div>
</jest>
`;

exports[`Animated Numbers renders correctly with a background 1`] = `
<jest>
  <div
    class="ecl-animated-numbers ecl-animated-numbers--with-background"
    data-ecl-auto-init="AnimatedNumbers"
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-animated-numbers__items"
      >
        <div
          class="ecl-animated-number"
        >
          <div
            class="ecl-animated-number__header"
          >
            <div
              class="ecl-animated-number__category"
            >
              Revenue
            </div>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--users ecl-icon ecl-icon--xl ecl-animated-number__icon ecl-icon-phosphor--users"
            />
          </div>
          <div
            class="ecl-animated-number__content"
          >
            <div
              class="ecl-animated-number__number"
            >
              <div
                class="ecl-animated-number__value"
                data-ecl-animated-numbers-value=""
              >
                213
              </div>
              <div
                class="ecl-animated-number__suffix"
              >
                €
              </div>
            </div>
          </div>
          <div
            class="ecl-animated-number__description"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
          </div>
        </div>
        <div
          class="ecl-animated-number"
        >
          <div
            class="ecl-animated-number__header"
          >
            <div
              class="ecl-animated-number__category"
            >
              Revenue
            </div>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--currency-eur ecl-icon ecl-icon--xl ecl-animated-number__icon ecl-icon-phosphor--currency-eur"
            />
          </div>
          <div
            class="ecl-animated-number__content"
          >
            <div
              class="ecl-animated-number__number"
            >
              <span
                class="ecl-animated-number__prefix"
              >
                billion
              </span>
              <div
                class="ecl-animated-number__value"
                data-ecl-animated-numbers-value=""
              >
                888.2
              </div>
              <div
                class="ecl-animated-number__suffix"
              >
                €
              </div>
            </div>
          </div>
          <div
            class="ecl-animated-number__description"
          >
            Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
        </div>
        <div
          class="ecl-animated-number"
        >
          <div
            class="ecl-animated-number__header"
          >
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--trend-up ecl-icon ecl-icon--xl ecl-animated-number__icon ecl-icon-phosphor--trend-up"
            />
          </div>
          <div
            class="ecl-animated-number__content"
          >
            <div
              class="ecl-animated-number__number"
            >
              <span
                class="ecl-animated-number__prefix"
              >
                billion
              </span>
              <div
                class="ecl-animated-number__value"
                data-ecl-animated-numbers-value=""
              >
                975
              </div>
              <div
                class="ecl-animated-number__suffix"
              >
                &lt;
              </div>
            </div>
          </div>
          <div
            class="ecl-animated-number__description"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
          </div>
        </div>
        <div
          class="ecl-animated-number"
        >
          <div
            class="ecl-animated-number__header"
          >
            <div
              class="ecl-animated-number__category"
            >
              Revenue
            </div>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--pulse ecl-icon ecl-icon--xl ecl-animated-number__icon ecl-icon-phosphor--pulse"
            />
          </div>
          <div
            class="ecl-animated-number__content"
          >
            <div
              class="ecl-animated-number__number"
            >
              <span
                class="ecl-animated-number__prefix"
              >
                €
              </span>
              <div
                class="ecl-animated-number__value"
                data-ecl-animated-numbers-value=""
              >
                1250
              </div>
              <div
                class="ecl-animated-number__suffix"
              >
                billions
              </div>
            </div>
          </div>
          <div
            class="ecl-animated-number__description"
          >
            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
          </div>
        </div>
        <div
          class="ecl-animated-number"
        >
          <div
            class="ecl-animated-number__header"
          >
            <div
              class="ecl-animated-number__category"
            >
              Revenue
            </div>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--aperture ecl-icon ecl-icon--xl ecl-animated-number__icon ecl-icon-phosphor--aperture"
            />
          </div>
          <div
            class="ecl-animated-number__content"
          >
            <div
              class="ecl-animated-number__number"
            >
              <span
                class="ecl-animated-number__prefix"
              >
                €
              </span>
              <div
                class="ecl-animated-number__value"
                data-ecl-animated-numbers-value=""
              >
                50
              </div>
              <div
                class="ecl-animated-number__suffix"
              >
                trillions
              </div>
            </div>
          </div>
          <div
            class="ecl-animated-number__description"
          >
            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas
          </div>
        </div>
        <div
          class="ecl-animated-number"
        >
          <div
            class="ecl-animated-number__header"
          >
            <div
              class="ecl-animated-number__category"
            >
              Revenue
            </div>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--atom ecl-icon ecl-icon--xl ecl-animated-number__icon ecl-icon-phosphor--atom"
            />
          </div>
          <div
            class="ecl-animated-number__content"
          >
            <div
              class="ecl-animated-number__number"
            >
              <span
                class="ecl-animated-number__prefix"
              >
                €
              </span>
              <div
                class="ecl-animated-number__value"
                data-ecl-animated-numbers-value=""
              >
                4350
              </div>
              <div
                class="ecl-animated-number__suffix"
              >
                millions
              </div>
            </div>
          </div>
          <div
            class="ecl-animated-number__description"
          >
            Curabitur ut mauris quam. Fusce non consequat ipsum
          </div>
        </div>
        <div
          class="ecl-animated-number"
        >
          <div
            class="ecl-animated-number__header"
          >
            <div
              class="ecl-animated-number__category"
            >
              Revenue
            </div>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--bell-simple ecl-icon ecl-icon--xl ecl-animated-number__icon ecl-icon-phosphor--bell-simple"
            />
          </div>
          <div
            class="ecl-animated-number__content"
          >
            <div
              class="ecl-animated-number__number"
            >
              <span
                class="ecl-animated-number__prefix"
              >
                €
              </span>
              <div
                class="ecl-animated-number__value"
                data-ecl-animated-numbers-value=""
              >
                125
              </div>
              <div
                class="ecl-animated-number__suffix"
              >
                billions
              </div>
            </div>
          </div>
          <div
            class="ecl-animated-number__description"
          >
            Curabitur ut mauris quam. Fusce non consequat ipsum
          </div>
        </div>
        <div
          class="ecl-animated-number"
        >
          <div
            class="ecl-animated-number__header"
          >
            <div
              class="ecl-animated-number__category"
            >
              Revenue
            </div>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--boat ecl-icon ecl-icon--xl ecl-animated-number__icon ecl-icon-phosphor--boat"
            />
          </div>
          <div
            class="ecl-animated-number__content"
          >
            <div
              class="ecl-animated-number__number"
            >
              <span
                class="ecl-animated-number__prefix"
              >
                €
              </span>
              <div
                class="ecl-animated-number__value"
                data-ecl-animated-numbers-value=""
              >
                8765
              </div>
              <div
                class="ecl-animated-number__suffix"
              >
                billions
              </div>
            </div>
          </div>
          <div
            class="ecl-animated-number__description"
          >
            Integer pharetra lacinia tristique
          </div>
        </div>
      </div>
      <div
        class="ecl-animated-numbers__sources"
      >
        <span
          class="ecl-animated-numbers__sources-label"
        >
          Sources:
        </span>
        <a
          class="ecl-link ecl-animated-numbers__source"
          href="/example"
        >
          Eurostat
        </a>
        <a
          class="ecl-link ecl-animated-numbers__source"
          href="/example"
        >
          DG CNECT
        </a>
        <a
          class="ecl-link ecl-animated-numbers__source"
          href="/example"
        >
          Eurostat
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Animated Numbers renders correctly with a border 1`] = `
<jest>
  <div
    class="ecl-animated-numbers ecl-animated-numbers--border ecl-animated-numbers--counter-color"
    data-ecl-auto-init="AnimatedNumbers"
  >
    <div
      class="ecl-animated-numbers__items"
    >
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--users ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--users"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              213
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              €
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--currency-eur ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--currency-eur"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              billion
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              888.2
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              €
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--trend-up ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--trend-up"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              billion
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              975
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              &lt;
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--pulse ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--pulse"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              1250
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              billions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--aperture ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--aperture"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              50
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              trillions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--atom ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--atom"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              4350
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              millions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Curabitur ut mauris quam. Fusce non consequat ipsum
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--bell-simple ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--bell-simple"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              125
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              billions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Curabitur ut mauris quam. Fusce non consequat ipsum
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--boat ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--boat"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              8765
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              billions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Integer pharetra lacinia tristique
        </div>
      </div>
    </div>
    <div
      class="ecl-animated-numbers__sources"
    >
      <span
        class="ecl-animated-numbers__sources-label"
      >
        Sources:
      </span>
      <a
        class="ecl-link ecl-animated-numbers__source"
        href="/example"
      >
        Eurostat
      </a>
      <a
        class="ecl-link ecl-animated-numbers__source"
        href="/example"
      >
        DG CNECT
      </a>
      <a
        class="ecl-link ecl-animated-numbers__source"
        href="/example"
      >
        Eurostat
      </a>
    </div>
  </div>
</jest>
`;

exports[`Animated Numbers renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-animated-numbers ecl-animated-numbers--counter-color"
    data-ecl-auto-init="AnimatedNumbers"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-animated-numbers__items"
    >
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--users ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--users"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              213
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              €
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--currency-eur ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--currency-eur"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              billion
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              888.2
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              €
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--trend-up ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--trend-up"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              billion
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              975
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              &lt;
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--pulse ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--pulse"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              1250
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              billions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--aperture ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--aperture"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              50
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              trillions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--atom ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--atom"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              4350
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              millions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Curabitur ut mauris quam. Fusce non consequat ipsum
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--bell-simple ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--bell-simple"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              125
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              billions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Curabitur ut mauris quam. Fusce non consequat ipsum
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--boat ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--boat"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              8765
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              billions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Integer pharetra lacinia tristique
        </div>
      </div>
    </div>
    <div
      class="ecl-animated-numbers__sources"
    >
      <span
        class="ecl-animated-numbers__sources-label"
      >
        Sources:
      </span>
      <a
        class="ecl-link ecl-animated-numbers__source"
        href="/example"
      >
        Eurostat
      </a>
      <a
        class="ecl-link ecl-animated-numbers__source"
        href="/example"
      >
        DG CNECT
      </a>
      <a
        class="ecl-link ecl-animated-numbers__source"
        href="/example"
      >
        Eurostat
      </a>
    </div>
  </div>
</jest>
`;

exports[`Animated Numbers renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-animated-numbers ecl-animated-numbers--counter-color custom-class custom-class--test"
    data-ecl-auto-init="AnimatedNumbers"
  >
    <div
      class="ecl-animated-numbers__items"
    >
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--users ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--users"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              213
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              €
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--currency-eur ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--currency-eur"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              billion
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              888.2
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              €
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--trend-up ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--trend-up"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              billion
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              975
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              &lt;
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--pulse ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--pulse"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              1250
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              billions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--aperture ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--aperture"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              50
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              trillions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--atom ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--atom"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              4350
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              millions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Curabitur ut mauris quam. Fusce non consequat ipsum
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--bell-simple ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--bell-simple"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              125
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              billions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Curabitur ut mauris quam. Fusce non consequat ipsum
        </div>
      </div>
      <div
        class="ecl-animated-number"
      >
        <div
          class="ecl-animated-number__header"
        >
          <div
            class="ecl-animated-number__category"
          >
            Revenue
          </div>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--boat ecl-icon ecl-icon--xl ecl-icon--primary ecl-animated-number__icon ecl-icon-phosphor--boat"
          />
        </div>
        <div
          class="ecl-animated-number__content"
        >
          <div
            class="ecl-animated-number__number"
          >
            <span
              class="ecl-animated-number__prefix"
            >
              €
            </span>
            <div
              class="ecl-animated-number__value"
              data-ecl-animated-numbers-value=""
            >
              8765
            </div>
            <div
              class="ecl-animated-number__suffix"
            >
              billions
            </div>
          </div>
        </div>
        <div
          class="ecl-animated-number__description"
        >
          Integer pharetra lacinia tristique
        </div>
      </div>
    </div>
    <div
      class="ecl-animated-numbers__sources"
    >
      <span
        class="ecl-animated-numbers__sources-label"
      >
        Sources:
      </span>
      <a
        class="ecl-link ecl-animated-numbers__source"
        href="/example"
      >
        Eurostat
      </a>
      <a
        class="ecl-link ecl-animated-numbers__source"
        href="/example"
      >
        DG CNECT
      </a>
      <a
        class="ecl-link ecl-animated-numbers__source"
        href="/example"
      >
        Eurostat
      </a>
    </div>
  </div>
</jest>
`;
